--- a/initiative-golden-hands.html
+++ b/initiative-golden-hands.html
@@ -13,7 +13,23 @@
 </head>
 <body class="bg-gray-900 text-white">
 
-    <!-- هيدر -->
+    <!-- Navbar -->
+    <nav class="bg-gray-800 py-4">
+        <div class="container mx-auto px-6 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-yellow-400">منصة التطوع الرمضانية</a>
+            <ul class="flex space-x-6">
+                <li><a href="initiative-challenge.html" class="text-white hover:text-yellow-400">تحدي الخير</a></li>
+                <li><a href="initiative-hikayati.html" class="text-white hover:text-yellow-400">حكايتي</a></li>
+                <li><a href="initiative-golden-hands.html" class="text-white hover:text-yellow-400">الأيادي الذهبية</a></li>
+                <li><a href="initiative-no-waste.html" class="text-white hover:text-yellow-400">رمضان بلا هدر</a></li>
+                <li><a href="initiative-ramadan-lights.html" class="text-white hover:text-yellow-400">أنوار رمضان</a></li>
+                <li><a href="initiative-good-coupon.html" class="text-white hover:text-yellow-400">كوبون الخير</a></li>
+                <li><a href="register.html" class="text-white hover:text-yellow-400">تسجيل</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Header -->
     <header class="bg-gradient-to-r from-yellow-600 to-orange-500 py-6 text-center">
         <h1 class="text-4xl font-extrabold">مبادرة الأيادي الذهبية</h1>
         <p class="text-lg opacity-90 mt-2">تبرع بمهاراتك وساعد الآخرين بخبرتك</p>
@@ -53,6 +69,34 @@
             <button class="mt-6 bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-3 rounded font-bold w-full">إرسال الطلب</button>
         </form>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 py-8 mt-16">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-2xl font-bold text-yellow-400 mb-4">منصة التطوع الرمضانية</h3>
+                    <p class="text-gray-300">نسعى لتعزيز روح التطوع والعطاء خلال شهر رمضان المبارك.</p>
+                </div>
+                <div>
+                    <h4 class="text-xl font-bold text-yellow-400 mb-4">روابط سريعة</h4>
+                    <ul class="space-y-2">
+                        <li><a href="index.html" class="text-gray-300 hover:text-yellow-400">الصفحة الرئيسية</a></li>
+                        <li><a href="register.html" class="text-gray-300 hover:text-yellow-400">تسجيل المتطوعين</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-yellow-400">اتصل بنا</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-xl font-bold text-yellow-400 mb-4">اتصل بنا</h4>
+                    <p class="text-gray-300">البريد الإلكتروني: info@ramadan-volunteer.com</p>
+                    <p class="text-gray-300">الهاتف: +966 123 456 789</p>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-8 text-center">
+                <p class="text-gray-300">© 2025 منصة التطوع الرمضانية. جميع الحقوق محفوظة.</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
