--- a/initiative-no-waste.html
+++ b/initiative-no-waste.html
@@ -13,6 +13,22 @@
 </head>
 <body class="bg-gray-900 text-white">
     
+    <!-- Navbar -->
+    <nav class="bg-gray-800 py-4">
+        <div class="container mx-auto px-6 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-yellow-400">منصة التطوع الرمضانية</a>
+            <ul class="flex space-x-6">
+                <li><a href="initiative-challenge.html" class="text-white hover:text-yellow-400">تحدي الخير</a></li>
+                <li><a href="initiative-hikayati.html" class="text-white hover:text-yellow-400">حكايتي</a></li>
+                <li><a href="initiative-golden-hands.html" class="text-white hover:text-yellow-400">الأيادي الذهبية</a></li>
+                <li><a href="initiative-no-waste.html" class="text-white hover:text-yellow-400">رمضان بلا هدر</a></li>
+                <li><a href="initiative-ramadan-lights.html" class="text-white hover:text-yellow-400">أنوار رمضان</a></li>
+                <li><a href="initiative-good-coupon.html" class="text-white hover:text-yellow-400">كوبون الخير</a></li>
+                <li><a href="register.html" class="text-white hover:text-yellow-400">تسجيل</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <!-- Hero Section -->
     <section class="bg-gradient-to-r from-green-700 to-yellow-800 text-white py-24 text-center relative overflow-hidden">
         <div class="absolute inset-0 bg-opacity-50"></div>
@@ -30,10 +46,49 @@
         <a href="register.html" class="block text-center mt-6 bg-yellow-400 text-gray-900 px-8 py-4 rounded-full font-bold text-lg shadow-lg hover:bg-yellow-500 transition duration-300">انضم الآن</a>
     </section>
 
+    <!-- Interactive Map Section -->
+    <section class="py-20 px-6 container mx-auto">
+        <h2 class="text-4xl font-bold text-center text-yellow-400 mb-12">خريطة أماكن التبرع</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.454676315038!2d46.67241531513719!3d24.71325388411968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba76d1a7e0f67837!2sRiyadh%2C%20Saudi%20Arabia!5e0!3m2!1sen!2sus!4v1633026786789!5m2!1sen!2sus" 
+                width="100%" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+        </iframe>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 py-8 mt-16">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-2xl font-bold text-yellow-400 mb-4">منصة التطوع الرمضانية</h3>
+                    <p class="text-gray-300">نسعى لتعزيز روح التطوع والعطاء خلال شهر رمضان المبارك.</p>
+                </div>
+                <div>
+                    <h4 class="text-xl font-bold text-yellow-400 mb-4">روابط سريعة</h4>
+                    <ul class="space-y-2">
+                        <li><a href="index.html" class="text-gray-300 hover:text-yellow-400">الصفحة الرئيسية</a></li>
+                        <li><a href="register.html" class="text-gray-300 hover:text-yellow-400">تسجيل المتطوعين</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-yellow-400">اتصل بنا</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-xl font-bold text-yellow-400 mb-4">اتصل بنا</h4>
+                    <p class="text-gray-300">البريد الإلكتروني: info@ramadan-volunteer.com</p>
+                    <p class="text-gray-300">الهاتف: +966 123 456 789</p>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-8 text-center">
+                <p class="text-gray-300">© 2025 منصة التطوع الرمضانية. جميع الحقوق محفوظة.</p>
+            </div>
+        </div>
+    </footer>
+
     <script>
         function joinNow() {
-            // يمكنك هنا إضافة أي إجراء آخر مثل فتح نموذج أو نافذة منبثقة
-            window.location.href = 'register.html'; // توجيه المستخدم إلى صفحة التسجيل
+            window.location.href = 'register.html';
         }
     </script>
 
